<resources>
    <string name="app_name">MyTaskApplication</string>
    <string name="name">OYEBOLA ODELEYE</string>
    <string name="discordname">Hojogbon</string>
    <string name="username">Hojogbon</string>
    <string name="track">Android App Development</string>
    <string name="hire_me">Hire Me</string>
    <string name="level">Beginner</string>
    <string name="image">My Picture</string>
    <string name="myimage">My Picture</string>
    <string name="clickhire">Hire Me</string>
    <string name="twitterlink">contactme</string>
    <string name="linkedinlink">contactme1</string>
</resources>